--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:1HxVF9im+BI4SFn4MuUl4QxbO+Pc4+syg7n2Tal3iRk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sql107.infinityfree.com
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=users
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=matheus@06
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
